--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ test-results/
 # Gradle wrapper (optional - uncomment to ignore)
 # gradle-wrapper.jar
 # gradle-wrapper.properties
+
+#firebender
+firebender.json
