feat: Enhance POS UI, add mock data, and enable image loading
This commit introduces significant UI enhancements to the `POSScreen`, expands the mock product data, and integrates the Coil library for network image loading in the product grid.

### UI Enhancements

*   **`POSScreen` Layout:**
    *   Refactored the `POSScreen` to use a weighted `Row` layout, allocating 70% of the width to the product grid and 30% to the shopping cart, matching the design specification.
    *   The search bar is now elevated and spans the full width of the product grid area.

*   **`ProductGrid` Component:**
    *   Introduced a new `ProductGrid` composable to encapsulate product display logic, including category filtering and handling search queries.
    *   This replaces the previous `LazyVerticalGrid` implementation directly inside `POSScreen`.

*   **`ShoppingCart` Interaction:**
    *   The `onCheckout` lambda now triggers a `PaymentDialog` instead of being a placeholder.
    *   Clicking a cart item now opens an `EditCartItemDialog`, allowing users to update quantity, apply discounts, or void the item.
    *   Callbacks `onUpdateItem` and `onVoidItem` were added to handle these interactions.

*   **Dialogs:**
    *   Added `EditCartItemDialog` to modify items in the cart.
    *   Added `PaymentDialog` to handle the checkout flow.

### Mock Data and Image Loading

*   **Expanded Product Data:**
    *   The `MockProductRepository` has been significantly expanded from 5 to 30 products.
    *   Products are now organized into "Food," "Beverages," and "Retail" categories, each with realistic names, prices, and a corresponding `imageUrl` from `unsplash.com`.

*   **Coil Image Loading:**
    *   Integrated Coil 3 for asynchronous image loading from network URLs.
    *   Added necessary dependencies (`coil-compose`, `coil-network-ktor3`) and Ktor client engines for Android, iOS, and Desktop to support network requests.
    *   Added the `INTERNET` permission to the AndroidManifest.

###

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -119,7 +119,7 @@ koin-ktor = { module = "io.insert-koin:koin-ktor", version.ref = "koin" }
 
 # Coil3 (Image loading)
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
-coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor", version.ref = "coil3" }
+coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil3" }
 
 # Voyager (Navigation)
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
