feat: Implement Variable Products, Parked Sales, Order History & Stock Management
This commit introduces several major features to achieve near-complete parity with the web application's core POS functionality. It implements the full lifecycle for variable products (variations and modifiers), persistent parked sales, a detailed order history screen, and real-time stock management.

### 1. Variable Products & Modifiers

-   **`VariationSelectionDialog`**: A new dialog opens when a product with variations (e.g., "Coffee") is clicked. It allows for selecting a variation (e.g., "Small", "Medium") and adding modifiers with quantity controls (e.g., "3x Extra Shot").
-   **Domain Model Update**:
    -   Introduced `ProductVariation` and `CartItemModifier` models to handle different product versions and add-ons with quantities.
    -   The `CartItem` model was updated to include the selected `variation` and use a list of `CartItemModifier`.
-   **UI Display Fix**: `CartItemCard` and `ReceiptDialog` now correctly display the variation name (e.g., "Coffee - Medium") and group modifiers with quantities and multiplied prices (e.g., "+ Extra Shot x3 (+$3.00)"), matching the web version's format.
-   **Mock Data**: Added "Coffee" and "Beef Burger" as sample products with variations and modifiers.

### 2. Parked Sales & Order History

-   **`OrdersScreen`**: A new, two-panel screen that displays a list of recently completed orders. Selecting an order shows its detailed contents, totals, and payment information on the right panel.
-   **`ParkedSalesDialog`**: The existing dialog is now fully functional. It displays a list of all parked sales, allows loading a sale back into the cart, deleting a sale, or parking the current one.
-   **Button & Navigation Fix**:
    -   The "Park Sale" button in the `ShoppingCart` is now wired to hold the current cart and open the `ParkedSalesDialog`.
    -   The "Orders" button in the `ActionBar` now correctly navigates to the new `OrdersScreen` ins

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ flyway = "11.15.0"
 coil3 = "3.3.0"
 voyager = "1.1.0"
 kermit = "2.0.8"
+okio = "3.9.1"
 
 [libraries]
 # Testing
@@ -130,6 +131,9 @@ voyager-bottom-sheet-navigator = { module = "cafe.adriel.voyager:voyager-bottom-
 
 # Logging
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
+
+# Okio (File I/O)
+okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
