feat: Implement Room database foundation for KMP
This commit introduces a complete Room database implementation for the native platforms (Android, iOS, Desktop), laying the groundwork for persistent local storage. It establishes a robust, multi-platform data layer using a `nativeMain` source set to isolate Room dependencies, ensuring the project remains buildable for web targets (JS/Wasm) which will use IndexedDB.

### Key Features & Implementation

*   **Room Database Setup (`AppDatabase.kt`)**:
    *   A new `AppDatabase` class has been created, configured with 8 entities: `Product`, `Category`, `Customer`, `Order`, `OrderItem`, `Modifier`, `ProductVariation`, and `User`.
    *   The database schema is exported to `shared/schemas/` for version control.

*   **Entities & DAOs (`nativeMain` source set)**:
    *   **Entities**: All 8 entity classes (`ProductEntity`, `OrderEntity`, etc.) are now annotated with `@Entity`, `@PrimaryKey`, and `@ForeignKey` to define the database structure, including relationships with cascading deletes.
    *   **DAOs**: Comprehensive Data Access Object (`DAO`) interfaces have been implemented for all entities (`ProductDao`, `OrderDao`, etc.), providing a full suite of `suspend` and `Flow`-based methods for CRUD operations, searching, and filtering.

*   **Platform-Specific Database Builders**:
    *   Created platform-specific builder functions to correctly locate the database file on each OS:
        *   **Android**: Uses `Context` to store the DB in the app's private directory.
        *   **iOS**: Uses `NSFileManager` to place the DB in the user's document directory.
        *   **Desktop (JVM)**: Stores the DB in the user's home directory (`.auraflow_pos/`).

*   **Abstraction Layer (`PosDatabase.kt`, `RoomDatabaseImpl.kt`)**:
    *   A `PosDatabase` interface defines a common contract for all data operations, decoupling repositories from the specific database technology.
    *   `RoomDatabaseImpl` provides the concrete implementati

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ android.useAndroidX=true
 #Multiplatform
 # Suppress stability warnings for KMP
 kotlin.mpp.stability.nowarn=true
+
+#KSP
+# KSP2 is now the default and only option with KSP 2.3.0+
+org.gradle.unsafe.configuration-cache=false
