feat: Implement multi-platform Koin dependency injection
This commit introduces a complete, multi-platform dependency injection (DI) setup using Koin. The new architecture provides a robust foundation by defining clear, modular dependencies for the data, network, and database layers, ensuring proper initialization across Android, iOS, Desktop, and Web.

### Key Changes

1.  **Modular Koin Setup**:
    *   **`NetworkModule`**: (commonMain) Provides a shared Ktor `HttpClient` configured with JSON serialization, logging, and timeouts.
    *   **`DataModule`**: (commonMain) Provides all repository and API client implementations (`ProductRepository`, `AuthRepository`, etc.) along with local and token storage.
    *   **`DatabaseModule`**: (nativeMain) Provides the Room `AppDatabase` and abstract `PosDatabase` interface for native platforms (Android, iOS, Desktop). It includes an `initializeDatabase()` function to ensure the database is ready before Koin starts.
    *   **`AppModule`**: (commonMain) Consolidates all common modules (`networkModule`, `dataModule`) for easy consumption.

2.  **Platform-Specific Initialization**:
    *   Dedicated `initKoin()` functions have been created for each platform (`KoinAndroid.kt`, `KoinIOS.kt`, `KoinDesktop.kt`, `KoinJS.kt`, `KoinWasm.kt`).
    *   On native platforms (Android, iOS, Desktop), `initKoin` first calls `initializeDatabase()` and then starts Koin with both `appModules` and the `databaseModule`.
    *   On web platforms (JS, WasmJS), `initKoin` starts Koin with only the `appModules`, as Room is not supported.

3.  **Documentation**:
    *   Added `PHASE_3_COMPLETE.md`, a comprehensive document detailing the new Koin DI architecture, dependency graph, module organization, usage examples for each platform, and next steps.

4.  **Configuration**:
    *   Updated `.gitignore` to exclude generated baseline profile files.

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ test-results/
 #firebender
 firebender.json
 /docs/Web Version/
+/composeApp/release/baselineProfiles/0/composeApp-release.dm
+/composeApp/release/baselineProfiles/1/composeApp-release.dm
+/composeApp/release/output-metadata.json
