--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -5,3 +5,9 @@ PRODUCT_BUNDLE_IDENTIFIER=com.theauraflow.pos.AuraFlowPOS$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
+
+// Framework search paths for ComposeApp KMP module
+FRAMEWORK_SEARCH_PATHS = $(inherited) $(SRCROOT)/../composeApp/build/bin/iosSimulatorArm64/debugFramework $(SRCROOT)/../composeApp/build/bin/iosArm64/debugFramework
+
+// Other linker flags
+OTHER_LDFLAGS = $(inherited) -framework ComposeApp
